plugins {
    id 'org.javamodularity.moduleplugin' version '1.7.0' apply false
}

allprojects {
    group = 'sjtu.ipads.wtune'
    version = '0.1'
}

subprojects {
    apply plugin: 'java'
    apply plugin: 'org.javamodularity.moduleplugin'

    java {
        sourceCompatibility = JavaVersion.VERSION_14
        targetCompatibility = JavaVersion.VERSION_14
        modularity.inferModulePath = true
    }

    repositories {
        mavenCentral()
    }

    test {
        useJUnitPlatform()
    }

    dependencies {
        testImplementation('org.junit.jupiter:junit-jupiter-api:5.6.2')
        testRuntimeOnly('org.junit.jupiter:junit-jupiter-engine:5.6.2')
        testRuntimeOnly('org.junit.platform:junit-platform-launcher:1.6.2')
        testRuntimeOnly('org.junit.vintage:junit-vintage-engine:5.6.2')
    }

    task("cleanAll") {
        dependsOn clean
    }
}

configurations {
    childJars
}

dependencies {
    subprojects.each {
        childJars project(it.path)
    }
}

task cleanAll {
    subprojects.each {
        dependsOn("${it.name}:cleanAll")
    }
}
